<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_item_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/remove_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <View
        android:id="@+id/divider_edit_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/remove_edit_button"/>

    <TextView
        android:id="@+id/text_view_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_name_text"
        android:layout_below="@id/remove_edit_button"
        android:padding="4dp"
        android:textSize="22dip"/>

    <EditText
        android:id="@+id/edit_text_article_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_text"
        android:layout_below="@id/text_view_item_name"/>

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:layout_below="@id/edit_text_article_name"
        android:padding="4dp"
        android:textSize="22dip"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:layout_below="@id/text_view_description"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/edit_entry_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cancel_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"/>

    </LinearLayout>
</RelativeLayout>