<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_menu_fragment"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <Button
        android:id="@+id/view_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_button"
        android:padding="4dp"/>

    <Button
        android:id="@+id/history_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_button"
        android:padding="4dp"/>

    <Button
        android:id="@+id/edit_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/edit_button"/>

</LinearLayout>