<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_item_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <RadioGroup
        android:id="@+id/add_fragment_task_option"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/radio_button_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_button_item"
            android:text="@string/item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </RadioGroup>

    <View
        android:id="@+id/divider_radio_buttons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/add_fragment_task_option"/>

    <TextView
        android:id="@+id/add_text_view_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_name_text"
        android:padding="4dp"
        android:textSize="@dimen/font_text_size"
        android:layout_below="@id/divider_radio_buttons"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/add_text_article_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_text"
        android:layout_below="@id/add_text_view_item_name"
        android:layout_marginLeft="8dp"/>

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/add_text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:textSize="@dimen/font_text_size"
        android:layout_below="@id/add_text_article_name"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/add_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:layout_below="@id/add_text_view_description"
        android:layout_marginLeft="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_entry_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_button"
            android:layout_weight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/cancel_add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:layout_margin="4dp"/>
    </LinearLayout>
</RelativeLayout>