<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <RadioGroup
        android:id="@+id/detail_radio_group"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:clickable="false">

        <RadioButton
            android:id="@+id/radio_button_detail_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:layout_weight="1"
            android:clickable="false"/>

        <RadioButton
            android:id="@+id/radio_button_detail_item"
            android:text="@string/item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"/>
    </RadioGroup>

    <View
        android:id="@+id/divider_radio_group"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/detail_radio_group"/>

    <TextView
        android:id="@+id/detail_text_view_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_name_text"
        android:padding="4dp"
        android:layout_below="@id/divider_radio_group"
        android:textSize="@dimen/font_text_size"/>

    <TextView
        android:id="@+id/detail_text_article_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_text_view_item_name"
        android:padding="4dp"
        android:textSize="@dimen/font_text_size"/>

    <View
        android:id="@+id/divider_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/detail_text_article_name"/>

    <TextView
        android:id="@+id/detail_text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:layout_below="@id/divider_name"
        android:padding="4dp"
        android:textSize="@dimen/font_text_size"/>

    <TextView
        android:id="@+id/detail_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_text_view_description"
        android:padding="4dp"
        android:textSize="@dimen/font_text_size"/>

    <View
        android:id="@+id/divider_description"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/detail_text_description"/>

    <LinearLayout
        android:id="@+id/quantity_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/divider_description"
        android:weightSum="4"
        android:visibility="gone">

        <TextView
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="@dimen/font_text_size"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/detail_okay_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/okay_button"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/detail_return_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/return_button"/>
    </LinearLayout>
</RelativeLayout>